[gd_scene load_steps=25 format=3 uid="uid://bfxnh8rfend8s"]

[ext_resource type="Theme" uid="uid://m7mvoj5x6lb5" path="res://Resources/UI/main_theme.tres" id="1_11kd4"]
[ext_resource type="Script" path="res://Scripts/UI/windows/VideoSettings.gd" id="1_ekxpx"]
[ext_resource type="Script" path="res://Scripts/UI/settings/video/scaling_dropdown.gd" id="2_ulpcs"]
[ext_resource type="Script" path="res://Scripts/UI/settings/game/autosave_dropdown.gd" id="3_0bi7w"]
[ext_resource type="PackedScene" uid="uid://dlggxv5xajmh4" path="res://Prefabs/UI/components/dropdown.tscn" id="3_xvup6"]
[ext_resource type="Script" path="res://Scripts/UI/settings/video/resolution_dropdown.gd" id="4_0o8gg"]
[ext_resource type="Texture2D" uid="uid://dcefs5w3baws" path="res://Textures/Icons/options.png" id="4_k0nu8"]
[ext_resource type="Script" path="res://Scripts/UI/settings/game/pan_spd_slider.gd" id="5_gq15u"]
[ext_resource type="Texture2D" uid="uid://cyxgi0uhqo7cl" path="res://Textures/Icons/reset.png" id="6_4p0y8"]
[ext_resource type="Script" path="res://Scripts/UI/settings/video/fullscreen_toggle.gd" id="6_dt5wn"]
[ext_resource type="Texture2D" uid="uid://c0t18nhd2xsyy" path="res://Textures/Icons/cross.png" id="7_e8fip"]
[ext_resource type="Script" path="res://Scripts/UI/settings/game/zoom_spd_slider.gd" id="7_hulc5"]
[ext_resource type="Texture2D" uid="uid://cpk4ra55sxwf5" path="res://Textures/Icons/plus.png" id="8_sbe3h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhn2u"]
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
content_margin_bottom = 24.0
bg_color = Color(0.960784, 0.960784, 0.960784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxkow"]
bg_color = Color(0, 0, 0, 1)
border_width_top = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hx6q"]
bg_color = Color(0.960784, 0.960784, 0.960784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qavf7"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2jwr"]
content_margin_left = 8.0
content_margin_top = 6.0
content_margin_right = 8.0
content_margin_bottom = 6.0
bg_color = Color(0.729412, 0.776471, 0.854902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ck7en"]
content_margin_left = 3.0
bg_color = Color(0.960784, 0.960784, 0.960784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxiua"]
content_margin_left = 3.0
bg_color = Color(0.729412, 0.776471, 0.854902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jdqlm"]
bg_color = Color(0.960784, 0.960784, 0.960784, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tgql8"]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color(0.729412, 0.776471, 0.854902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h5426"]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82470"]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_bottom = 2.0
bg_color = Color(0.960784, 0.960784, 0.960784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color(0, 0, 0, 1)

[node name="video_settings" type="Panel"]
texture_filter = 1
clip_contents = true
offset_right = 309.0
offset_bottom = 349.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hhn2u")
script = ExtResource("1_ekxpx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="GAME_CONTAINER" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="autosave_dropdown" type="HBoxContainer" parent="MarginContainer/GAME_CONTAINER"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_11kd4")
theme_override_constants/separation = 24
script = ExtResource("3_0bi7w")

[node name="label" type="Label" parent="MarginContainer/GAME_CONTAINER/autosave_dropdown"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Autosave Frequency:"

[node name="dropdown" parent="MarginContainer/GAME_CONTAINER/autosave_dropdown" instance=ExtResource("3_xvup6")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/GAME_CONTAINER"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxFlat_wxkow")

[node name="pan_spd_slider" type="HBoxContainer" parent="MarginContainer/GAME_CONTAINER"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_11kd4")
theme_override_constants/separation = 24
script = ExtResource("5_gq15u")

[node name="label" type="Label" parent="MarginContainer/GAME_CONTAINER/pan_spd_slider"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Camera Pan Speed:"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GAME_CONTAINER/pan_spd_slider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="MarginContainer/GAME_CONTAINER/pan_spd_slider/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 4.0
max_value = 16.0
step = 0.1
value = 4.0
scrollable = false
tick_count = 6
ticks_on_borders = true

[node name="reset_btn" type="Button" parent="MarginContainer/GAME_CONTAINER/pan_spd_slider/HBoxContainer"]
texture_filter = 1
layout_mode = 2
tooltip_text = "Restore default value."
mouse_default_cursor_shape = 2
theme = ExtResource("1_11kd4")
theme_override_constants/h_separation = 1
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_7hx6q")
theme_override_styles/hover = SubResource("StyleBoxFlat_qavf7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qavf7")
icon = ExtResource("6_4p0y8")
icon_alignment = 1

[node name="zoom_spd_slider" type="HBoxContainer" parent="MarginContainer/GAME_CONTAINER"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_11kd4")
theme_override_constants/separation = 24
script = ExtResource("7_hulc5")

[node name="label" type="Label" parent="MarginContainer/GAME_CONTAINER/zoom_spd_slider"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Camera Zoom Speed:"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GAME_CONTAINER/zoom_spd_slider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="MarginContainer/GAME_CONTAINER/zoom_spd_slider/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 2.0
max_value = 12.0
step = 0.1
value = 8.0
scrollable = false
tick_count = 6
ticks_on_borders = true

[node name="reset_btn" type="Button" parent="MarginContainer/GAME_CONTAINER/zoom_spd_slider/HBoxContainer"]
texture_filter = 1
layout_mode = 2
tooltip_text = "Restore default value."
mouse_default_cursor_shape = 2
theme = ExtResource("1_11kd4")
theme_override_constants/h_separation = 1
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_7hx6q")
theme_override_styles/hover = SubResource("StyleBoxFlat_qavf7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qavf7")
icon = ExtResource("6_4p0y8")
icon_alignment = 1

[node name="VIDEO_CONTAINER" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="interface_scaling" type="HBoxContainer" parent="MarginContainer/VIDEO_CONTAINER"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_11kd4")
theme_override_constants/separation = 24
script = ExtResource("2_ulpcs")

[node name="scaling_option" type="Label" parent="MarginContainer/VIDEO_CONTAINER/interface_scaling"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Interface Scaling:"

[node name="dropdown" parent="MarginContainer/VIDEO_CONTAINER/interface_scaling" instance=ExtResource("3_xvup6")]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="MarginContainer/VIDEO_CONTAINER"]
layout_mode = 2
theme = ExtResource("1_11kd4")
theme_override_styles/panel = SubResource("StyleBoxFlat_p2jwr")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VIDEO_CONTAINER/Panel"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VIDEO_CONTAINER/Panel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_k0nu8")
stretch_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VIDEO_CONTAINER/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "NOTE: Pixel-perfect scaling is not recommended for resolutions higher than '2560 x 1440'."
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VIDEO_CONTAINER"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxFlat_wxkow")

[node name="resoultion" type="HBoxContainer" parent="MarginContainer/VIDEO_CONTAINER"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 24
script = ExtResource("4_0o8gg")

[node name="scaling_option" type="Label" parent="MarginContainer/VIDEO_CONTAINER/resoultion"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_11kd4")
theme_override_font_sizes/font_size = 15
text = "Resolution:"

[node name="dropdown" parent="MarginContainer/VIDEO_CONTAINER/resoultion" instance=ExtResource("3_xvup6")]
layout_mode = 2

[node name="fullscreen" type="HBoxContainer" parent="MarginContainer/VIDEO_CONTAINER"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 24
script = ExtResource("6_dt5wn")

[node name="scaling_option" type="Label" parent="MarginContainer/VIDEO_CONTAINER/fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_11kd4")
theme_override_font_sizes/font_size = 15
text = "Fullscreen:"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VIDEO_CONTAINER/fullscreen"]
layout_mode = 2
theme_override_constants/check_v_offset = 1
theme_override_icons/checked = ExtResource("7_e8fip")
theme_override_icons/unchecked = ExtResource("8_sbe3h")
theme_override_styles/normal = SubResource("StyleBoxFlat_ck7en")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nxiua")
icon_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 29.0
grow_horizontal = 2
theme = ExtResource("1_11kd4")
theme_override_styles/panel = SubResource("StyleBoxFlat_jdqlm")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 7.0
offset_right = 296.0
offset_bottom = 29.0

[node name="GAME_TAB" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_tgql8")
theme_override_styles/hover = SubResource("StyleBoxFlat_h5426")
theme_override_styles/pressed = SubResource("StyleBoxFlat_82470")
toggle_mode = true
button_pressed = true
text = "Game"

[node name="VIDEO_TAB" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_tgql8")
theme_override_styles/hover = SubResource("StyleBoxFlat_h5426")
theme_override_styles/pressed = SubResource("StyleBoxFlat_82470")
toggle_mode = true
text = "Video"

[node name="SOUND_TAB" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_tgql8")
theme_override_styles/hover = SubResource("StyleBoxFlat_h5426")
theme_override_styles/pressed = SubResource("StyleBoxFlat_82470")
disabled = true
toggle_mode = true
text = "Sound"
